Added a NODE=x to the makefile process for udp-ipv6

--- a/platform/avr-zigduino/tests/udp-ipv6/Makefile
+++ b/platform/avr-zigduino/tests/udp-ipv6/Makefile
@@ -1,6 +1,6 @@
 all: udp-server udp-client
 TARGET = avr-zigduino
 UIP_CONF_IPV6 = 1
-CFLAGS += -DUDP_CONNECTION_ADDR=fdfd::3
+CFLAGS += -DUDP_CONNECTION_ADDR=fdfd::$(NODE)
 CONTIKI = ../../../..
 include $(CONTIKI)/Makefile.include
