--- a/platform/avr-zigduino/tests/shell/Makefile
+++ b/platform/avr-zigduino/tests/shell/Makefile
@@ -3,7 +3,7 @@ all: $(CONTIKI_PROJECT)
 
 APPS = serial-shell
 CONTIKI = ../../../..
-CONTIKI_TARGET_SOURCEFILES += shell-udphello.c
+CONTIKI_TARGET_SOURCEFILES += shell-udphello.c shell-udp-sendcmd.c
 UIP_CONF_IPV6=1
 TARGET=avr-zigduino
 
