Added SLIP capability to avr-zigduino.  Tested with rpl-border-router.  Be sure to make WITH_SLIP=1 to enable this.  Button sensor is included just to make the border router compile.

--- a/platform/avr-zigduino/Makefile.avr-zigduino
+++ b/platform/avr-zigduino/Makefile.avr-zigduino
@@ -6,6 +6,11 @@ CONTIKI_TARGET_SOURCEFILES += $(CONTIKI_CORE).c leds-arch.c
 CONTIKI_AVR=$(CONTIKI)/cpu/avr
 CONTIKI_PLAT_DEFS = -DF_CPU=16000000UL -DAUTO_CRC_PADDING=2
 
+ifeq ($(WITH_SLIP),1)
+CONTIKI_TARGET_SOURCEFILES += slip_uart0.c slip.c button-sensor.c sensors.c
+CFLAGS += -DWITH_SLIP=$(WITH_SLIP) 
+endif
+
 MCU=atmega128rfa1
 
 AVRDUDE_PROGRAMMER=arduino
