--- a/examples/ipv6/rpl-collect/Makefile
+++ b/examples/ipv6/rpl-collect/Makefile
@@ -6,6 +6,10 @@ PROJECT_SOURCEFILES += collect-common.c
 WITH_UIP6=1
 UIP_CONF_IPV6=1
 
+ifdef PERIOD
+CFLAGS=-DPERIOD=$(PERIOD)
+endif
+
 all: $(CONTIKI_PROJECT)
 
 include $(CONTIKI)/Makefile.include
