--- a/examples/ipv6/rpl-udp/Makefile
+++ b/examples/ipv6/rpl-udp/Makefile
@@ -5,4 +5,11 @@ CONTIKI=../../..
 WITH_UIP6=1
 UIP_CONF_IPV6=1
 
+ifdef SERVER_REPLY
+CFLAGS+=-DSERVER_REPLY=$(SERVER_REPLY)
+endif
+ifdef PERIOD
+CFLAGS+=-DPERIOD=$(PERIOD)
+endif
+
 include $(CONTIKI)/Makefile.include
