--- a/platform/avr-zigduino/Makefile.avr-zigduino
+++ b/platform/avr-zigduino/Makefile.avr-zigduino
@@ -1,13 +1,18 @@
-CONTIKI_TARGET_DIRS = . apps net loader
+CONTIKI_TARGET_DIRS = . dev apps net loader
 
 CONTIKI_CORE=contiki-main
 CONTIKI_TARGET_MAIN = ${CONTIKI_CORE}.o
-CONTIKI_TARGET_SOURCEFILES += $(CONTIKI_CORE).c leds-arch.c
+CONTIKI_TARGET_SOURCEFILES += $(CONTIKI_CORE).c leds-arch.c adc.c button-sensor.c sensors.c temperature-sensor.c battery-sensor.c
 CONTIKI_AVR=$(CONTIKI)/cpu/avr
 CONTIKI_PLAT_DEFS = -DF_CPU=16000000UL -DAUTO_CRC_PADDING=2
 
-# Many examples expect a button sensor
-CONTIKI_TARGET_SOURCEFILES += button-sensor.c sensors.c
+# Bring in Arduino core, or leave this blank if no core
+ARDUINO_CORE = $(HOME)/Zigduino/arduino/cores/zigduino
+ifneq ($(ARDUINO_CORE),) 
+CFLAGS += -I$(ARDUINO_CORE) -DARDUINO_CORE=1
+PROJECTDIRS += $(ARDUINO_CORE)
+PROJECT_SOURCEFILES += wiring_digital.c pins_arduino.c WInterrupts.c wiring_analog.c wiring.c
+endif
 
 ifeq ($(WITH_SLIP),1)
 CONTIKI_TARGET_SOURCEFILES += slip_uart0.c slip.c 
