--- a/apps/collect-view/Makefile.collect-view
+++ b/apps/collect-view/Makefile.collect-view
@@ -1,7 +1,6 @@
-collect-view_src = collect-view.c
-
-ifeq ($(TARGET), sky)
-collect-view_src += collect-view-sky.c
-else
-collect-view_src += collect-view-template.c
+ARCH_READ_SENSORS=collect-view-$(TARGET).c
+ifeq ($(wildcard $(CONTIKI)/apps/collect-view/$(ARCH_READ_SENSORS)),)
+	ARCH_READ_SENSORS=collect-view-template.c
 endif
+
+collect-view_src = collect-view.c $(ARCH_READ_SENSORS)
